[gd_scene load_steps=2 format=3 uid="uid://ck6yp9xwqr5bd"]

[ext_resource type="Script" path="res://scenes/shop_controller.gd" id="1_shop"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.14, 1)

[node name="GlassPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GlassPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="GlassPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="GlassPanel/VBoxContainer/Header"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "< "

[node name="Title" type="Label" parent="GlassPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "ðŸ›’ MAÄžAZA"
vertical_alignment = 1

[node name="Separator" type="HSeparator" parent="GlassPanel/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="GlassPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Modlar" type="ScrollContainer" parent="GlassPanel/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="ModsList" type="VBoxContainer" parent="GlassPanel/VBoxContainer/TabContainer/Modlar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Temalar" type="ScrollContainer" parent="GlassPanel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ThemesList" type="VBoxContainer" parent="GlassPanel/VBoxContainer/TabContainer/Temalar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="DiÄŸer" type="ScrollContainer" parent="GlassPanel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="OtherList" type="VBoxContainer" parent="GlassPanel/VBoxContainer/TabContainer/DiÄŸer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[connection signal="pressed" from="GlassPanel/VBoxContainer/Header/BackButton" to="." method="_on_back_pressed"]
